<resources>
    <string name="app_name">sysu-course-selecting-system</string>
    <string name="theme_name">中大课程通</string>
    <string name="input_netId">请输入netId</string>
    <string name="input_passwd">请输入密码</string>
    <string name="login">登 录</string>
    <string name="course_table">课表</string>
    <string name="course_selection">选课</string>
    <string name="communication">交流</string>
    <string name="me">我</string>
    <string name="import_course">导入课表</string>
    <string name="confirm">确认</string>
    <string name="course_evaluate">课程评价</string>
    <string name="evaluate_hint">注意：请根据您的满意程度对以下指标进行评价</string>
    <string name="attend">签到频率</string>
    <string name="interest">有趣程度</string>
    <string name="task_quantity">周作业量</string>
    <string name="task_difficulty">作业难度</string>
    <string name="test_difficulty">考试难度</string>
    <string name="confirm_evaluate">确认评价</string>
    <string name="sex">性别</string>
    <string name="student_id">学号</string>
    <string name="grade">年级</string>
    <string name="faculty">院系</string>
    <string name="major">专业</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
