<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_evaluate"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.a44511.sysu_course_selecting_system.EvaluateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_btn"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/course_evaluate"
            android:textColor="@color/themeColor"
            android:textSize="@dimen/large_text_size"/>
    </LinearLayout>

    <TextView
        android:id="@+id/course_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_large_top_margin"
        android:text="软件测试"
        android:textSize="@dimen/large_text_size"
        android:textColor="@color/themeColor"/>
    <TextView
        android:id="@+id/teacher_name"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="蔡国扬"
        android:textSize="@dimen/middle_text_size"
        android:textColor="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_small_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/evaluate_hint"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/activity_small_margin"
        android:layout_marginRight="@dimen/activity_small_margin"
        android:layout_marginTop="@dimen/activity_small_margin"
        android:background="@color/backLine"/>

    <LinearLayout
        style="@style/evaluate_layout">

        <TextView
            style="@style/evaluate_text"
            android:text="@string/attend"/>
        <RatingBar
            android:id="@+id/ratingBar1"
            style="@style/evaluate_item"
            android:progressTint="@color/themeColor">
        </RatingBar>
    </LinearLayout>

    <LinearLayout
        style="@style/evaluate_layout">

        <TextView
            android:text="@string/interest"
            style="@style/evaluate_text"/>

        <RatingBar
            android:id="@+id/ratingBar2"
            style="@style/evaluate_item"
            android:progressTint="@color/themeColor">
        </RatingBar>
    </LinearLayout>

    <LinearLayout
        style="@style/evaluate_layout">

        <TextView
            android:text="@string/task_quantity"
            style="@style/evaluate_text"/>

        <RatingBar
            android:id="@+id/ratingBar3"
            style="@style/evaluate_item"
            android:progressTint="@color/themeColor">
        </RatingBar>
    </LinearLayout>

    <LinearLayout
        style="@style/evaluate_layout">

        <TextView
            android:text="@string/task_difficulty"
            style="@style/evaluate_text"/>

        <RatingBar
            android:id="@+id/ratingBar4"
            style="@style/evaluate_item"
            android:progressTint="@color/themeColor">
        </RatingBar>
    </LinearLayout>

    <LinearLayout
        style="@style/evaluate_layout">

        <TextView
            android:text="@string/test_difficulty"
            style="@style/evaluate_text"/>

        <RatingBar
            android:id="@+id/ratingBar5"
            android:progressTint="@color/themeColor"
            style="@style/evaluate_item">
        </RatingBar>
    </LinearLayout>

    <Button
        style="@style/button"
        android:text="@string/confirm_evaluate"
        android:id="@+id/confirm_evaluate"/>
</LinearLayout>
