<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_marginTop="@dimen/activity_large_top_margin"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"/>

    <EditText
        android:layout_margin="5dp"
        android:id="@+id/netId"
        android:hint="@string/input_netId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/passWd"
        android:hint="@string/input_passwd"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <Button
        style="@style/button"
        android:id="@+id/loginBtn"
        android:text="@string/login"/>
</LinearLayout>

