<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="false"
    tools:context="com.example.a44511.sysu_course_selecting_system.MainActivity">

    <FrameLayout
        android:id="@+id/main_content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/backLine"/>

    <RadioGroup
        android:id="@+id/tab_mean"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbCourseTab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/course_table"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="2dp"
            android:text="@string/course_table"
            android:textColor="@color/tab_selector_color" />


        <RadioButton
            android:id="@+id/rbCourseSelect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="2dp"
            android:drawableTop="@drawable/course_selection"
            android:text="@string/course_selection"
            android:textColor="@color/tab_selector_color" />

        <RadioButton
            android:id="@+id/rbCommunication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/communication"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="2dp"
            android:text="@string/communication"
            android:textColor="@color/tab_selector_color" />


        <RadioButton
            android:id="@+id/rbMe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/user"
            android:gravity="center_horizontal|bottom"
            android:paddingTop="2dp"
            android:text="@string/me"
            android:textColor="@color/tab_selector_color" />
    </RadioGroup>
</LinearLayout>
