<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:imagecontrol="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center_vertical"
        android:background="@color/themeColor">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:gravity="center">
            <com.example.a44511.sysu_course_selecting_system.CircleImage
                android:id="@+id/userImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                imagecontrol:border_inside_color="#fff7f2e9"
                imagecontrol:border_outside_color="#ffd5d1c8"
                imagecontrol:border_thickness="2dp"
                android:src="@mipmap/im"/>

            <TextView
                android:id="@+id/userNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="Kevin"
                android:textColor="@color/white"/>
        </LinearLayout>
    </RelativeLayout>

    <View
        style="@style/SettingViewStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textSize="@dimen/middle_text_size"/>

            <TextView
                style="@style/meItem"
                android:text="男"/>
        </LinearLayout>
        <View
            style="@style/meViewLine"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/student_id"
                android:textSize="@dimen/middle_text_size"/>

            <TextView
                style="@style/meItem"
                android:text="14331234"/>
        </LinearLayout>
        <View
            android:layout_marginTop="@dimen/activity_small_margin"
            style="@style/SettingViewStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grade"
                android:textSize="@dimen/middle_text_size"/>

            <TextView
                style="@style/meItem"
                android:text="2014"/>
        </LinearLayout>
        <View
            style="@style/meViewLine"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/faculty"
                android:textSize="@dimen/middle_text_size"/>

            <TextView
                style="@style/meItem"
                android:text="数据科学院"/>
        </LinearLayout>

        <View
            style="@style/meViewLine"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/major"
                android:textSize="@dimen/middle_text_size"/>

            <TextView
                style="@style/meItem"
                android:text="软件工程"/>
        </LinearLayout>
        <View
            style="@style/meViewLine"/>
    </LinearLayout>
</LinearLayout>
